# wap-gcp-analytics-sandbox

./: .gitattributes  .gitignore  LICENSE  README.md  dagster_cloud.yaml  pyproject.toml
.github/workflows/: branch_deployments.yml  deploy.yml
gcp_analytics_sandbox/: definitions.py
gcp_analytics_sandbox/ingestion/assets/: asset_factory_bq_load.py  asset_factory_gcs_load.py  assets_bq_load.py  assets_gcs_load.py
gcp_analytics_sandbox/ingestion/assets/config_model/: bq_config_model.py  gcs_config_model.py
gcp_analytics_sandbox/ingestion/assets/config_yaml/: bq_load_config.yaml  gcs_load_config.yaml
gcp_analytics_sandbox/initialization/assets/: constants.py  create_bq_datasets.py  generate_dynamic_mock_data.py  generate_load_date_dim.py  initialize_static_data.py
gcp_analytics_sandbox/initialization/data/: generate_retail_catalog.ipynb  product_suppliers_rationale.json
gcp_analytics_sandbox/initialization/data/mock_data/: authors.parquet  authors_products.parquet  categories.parquet  channels.parquet  (+10 more)
gcp_analytics_sandbox/jobs_and_sensors/: jobs_by_domain.py  sensors_by_group.py
gcp_analytics_sandbox/shared_resources/: blue_green_resource.py  dbt_cli_resource.py  default_partition_definition.py  duckdb_resources.py  gcp_resources.py  local_yaml_resource.py
gcp_analytics_sandbox/transformation/assets/: dbt_build_snapshots_and_models.py  dbt_cli_from_git_pull.py  dbt_project_rep.py  revert_bq_table_example.py  write_audit_publish_cycle.py
gcp_analytics_sandbox/transformation/dbt_bq_analytics/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
(+104 files in other folders)
